--- a/jobs/macroses/git-jenkins-jobs.yaml
+++ b/jobs/macroses/git-jenkins-jobs.yaml
@@ -14,7 +14,7 @@
     name: git-runner
     scm:
     - git:
-        url: git@github.com:exarcist12/jenkins.git
+        url: git@github.com:exarcist12/jenkins2.git
         credentials-id: jenkins
         branches:
         - FETCH_HEAD
