--- a/jobs/templates/jenkins-jobs-uploader.yml
+++ b/jobs/templates/jenkins-jobs-uploader.yml
@@ -10,4 +10,4 @@
     pipeline-scm:
       scm:
       - git-runner
-      script-path: jobs/scripts/jobs_template.yaml
+      script-path: jobs/scripts/jobs_template.groovy
