--- a/jobs/view.yaml
+++ b/jobs/view.yaml
@@ -22,7 +22,7 @@
     name: DevOps
     view-type: list
     description: |
-      <h3 style="color:#999696;">DevOps</h3>
+      <h3 style="color:#999696;">DevOpss</h3>
     filter-executors: true
     filter-queue: true
     job-name:
