--- a/jobs/templates/ui-tests.yaml
+++ b/jobs/templates/ui-tests.yaml
@@ -21,7 +21,7 @@
       - string:
           name: BROWSER
           default: chrome
-          description: Browxser name
+          description: Browser name
       - string:
           name: BROWSER_VERSION
           default: 107.0
