--- a/jobs/templates/api-tests.yaml
+++ b/jobs/templates/api-tests.yaml
@@ -1,5 +1,5 @@
 - job-template:
-    name: 'ui-tests'
+    name: 'api-tests'
     description: '<h3 style="color:#999696;">API tests</h3>'
     project-type: pipeline
     concurrent: true
